--- a/style.css
+++ b/style.css
@@ -149,6 +149,16 @@ body{
         display: none;
     }
 
+    .checkbox:checked ~ .menu{
+        top: 0;
+    }
+
+    .checkbox:checked ~ .menu li a{
+        border-bottom: solid 0px rgb(204, 201, 201);
+        background-color: white;
+        height: 100%;
+    } 
+
     .menu li a{
         height: 100%;
         font-size: 24px;
@@ -299,7 +309,7 @@ body{
 }
 
 .franja1{
-    border-bottom: 3px solid blueviolet;
+    border-bottom: 3px solid rgb(138, 43, 226);
     padding-bottom: 10%;
 }
 
@@ -1000,8 +1010,8 @@ h3{
 }
 
 .footer-logo{
-    margin-top: 20px;
-    width: 135px;
+    margin-top: 15px;
+    width: 125px;
 }
 
 .footer-section1{
