--- a/style.css
+++ b/style.css
@@ -723,9 +723,13 @@ body{
     height: 45%;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: center;
+    justify-content: center;
     padding-top: 0;
+}
+
+.section-skills{
+    margin-right: 5%;
 }
 
 .t1{
@@ -743,6 +747,7 @@ body{
 }
 
 .a2{
+    margin-right: 100px;
     margin-top: 5%;
     height: 12%;
     width: 20%;
@@ -872,18 +877,22 @@ h3{
 }
 
 .about-block-section-s1{
+    align-items: center;
     width: 100%;
     padding-right: 8%;
     margin-bottom: 30px;
 }
 
 .p1{
+    text-align: center;
     margin-top: 0;
     font-size: 15px;
 }
 
 .hb1{
+    /* margin: 0; */
     height: 45px;
+    margin-left: 40%;
 }
 
 .about-block-title1{
